--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body {
   font-size: 1.6rem;
   padding: 2rem;
   display: flex;
-  /* margin-top: -1015px; */
+  margin-top: -1015px;
 }
 .leftsidebar header img {
   width: 45px;
