--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ body {
   top: 0;
   bottom: 0;
 }
+
 .leftsidebar header img {
   width: 45px;
   height: 45px;
@@ -90,7 +91,39 @@ nav ul li {
   align-items: center;
   /* text-align: center; */
 }
-
+.bottom-nav {
+  background-color: #1f4172;
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+  margin-right: 1.8rem;
+}
+.bottom-nav p {
+  display: flex;
+  justify-content: center;
+  font-size: 1.4rem;
+}
+.bottom-nav p:first-child {
+  margin-top: 0.45rem;
+}
+.bottom-nav svg {
+  margin: 0.5rem 0.5rem 0.5rem 0;
+  font-size: 4rem;
+  background-color: #102c57;
+  border-radius: 0.4rem;
+  display: flex;
+  justify-content: center;
+  padding-left: 0.4rem;
+  -webkit-border-radius: 0.4rem;
+  -moz-border-radius: 0.4rem;
+  -ms-border-radius: 0.4rem;
+  -o-border-radius: 0.4rem;
+}
 /* header?\ */
 
 .header-nav {
